# xtaskops

./: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: main.rs
xtaskops/: Cargo.toml
xtaskops/src/: lib.rs  ops.rs  tasks.rs
