[package]
name = "xtaskops"
version = "0.2.0"
edition = "2021"

description = "Goodies for working with the xtask concept"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/xtaskops"
repository = "https://github.com/jondot/xtaskops"
categories = ["development-tools"]
keywords = ["xtask"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
anyhow = "1"
duct = "0.13.5"
glob = "0.3.0"
fs_extra = "1"
dialoguer = "^0.10.1"


[dev-dependencies]
